gateway-2 tiny refactoring